# fastapi_approach

./: .gitignore  README.md  pyproject.toml  railway.toml  requirements.railway.txt  requirements.txt
app/: __init__.py  main.py
app/core/: __init__.py  backup_document_processor.py  config.py  document_processor.py  document_processor_2.py
app/models/: schemas.py
app/utils/: __init__.py  file_handlers.py  template_manager.py
docker/: Dockerfile  Dockerfile.railway  docker-compose-railway.yml  docker-compose.simple.yml  docker-compose.yml  dockerfile.light  entrypoint.sh  requirements.txt  requirements_backup.txt
scripts/: deploy.sh  docker-build.ps1  docker-logs.ps1  docker-stop.ps1  fix-imports.ps1  make_executable.sh  setup.sh  test.sh
templates/: business_cert.yaml  index.html  kenyan_id.yaml  kra_pin.yaml  results.html
tests/: test_main.py
